Disable MyMoneyFile signals while we import a GnuCash file.

This is needed to avoid updating views while the import is not
finished and the data in the MyMoneyFile is not ready to be used.

BUG: 283848